Updating publishing process

--- a/sample-app/cda/build.gradle
+++ b/sample-app/cda/build.gradle
@@ -65,15 +65,28 @@ task sourceJar(type: Jar) {
     classifier "sources"
 }
 
-// Create the publication with the pom configuration
-publishing {
-    publications {
-        MyPublication(MavenPublication) {
-            groupId libGroupId
-            artifactId libArtifactId
-            version libVersion
-            artifact(sourceJar)
-            artifact("$buildDir/outputs/aar/${archivesBaseName}.aar")
+afterEvaluate {
+    publishing {
+        publications {
+            // Creates a Maven publication called "release".
+            release(MavenPublication) {
+                // Applies the component for the release build variant.
+                from components.release
+
+                // You can then customize attributes of the publication as shown below.
+                groupId = libGroupId
+                artifactId = libArtifactId
+                version = libVersion
+            }
+            // Creates a Maven publication called “debug”.
+            debug(MavenPublication) {
+                // Applies the component for the debug build variant.
+                from components.debug
+
+                groupId = libGroupId
+                artifactId = libArtifactId
+                version = libVersion
+            }
         }
     }
 }
