--- a/sample-app/app/build.gradle
+++ b/sample-app/app/build.gradle
@@ -34,7 +34,7 @@ android {
 
 dependencies {
 
-    implementation project(":cda")
+    implementation 'com.github.ingjuanocampo:CompositeDelegateAdapter:1.0.3'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
