--- a/sample-app/cda/build.gradle
+++ b/sample-app/cda/build.gradle
@@ -4,6 +4,9 @@ plugins {
     id 'maven-publish'
 }
 
+apply from: "$rootProject.projectDir/android.gradle"
+
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
@@ -40,21 +43,11 @@ android {
 
 }
 
-dependencies {
-
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.2.1'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-}
 
 //region Publish to jCenter
 def libGroupId = 'com.ingjuanocampo'
 def libArtifactId = 'cda'
-def libVersion = '1.0.2'
+def libVersion = '1.0.4'
 def libDesc = 'This is an Android project with a composite adapter'
 def libLicenses = ['Apache-2.0']
 def libVCSUrl = 'https://github.com/ingjuanocampo/CompositeDelegateAdapter.git'
